Fix GitHub Actions workflow - add debug info

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,16 @@ jobs:
         uses: actions/configure-pages@v4
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+      
+      - name: Debug
+        run: |
+          echo "Node version: $(node --version)"
+          echo "NPM version: $(npm --version)"
+          echo "Files in repo:"
+          ls -la
+          echo "Package.json exists:"
+          ls -la package.json
       
       - name: Build
         run: npm run build
